<resources>
    <string name="app_name">Cartão de Visita</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="text_btaddcard">adicionar novo cartão</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cancel">Cancelar</string>
    <string name="conclusion">Concluir</string>
    <string name="label_description_business_cards">Novo Cartão</string>

    <string name="layer_nome">Nome</string>
    <string name="layer_telefone">Telefone</string>
    <string name="layer_email">Email</string>
    <string name="layer_senha">Senha</string>
    <string name="layer_repita_sua_senha">Digite novamente a sua senha</string>
    <string name="layer_empresa">Empresa</string>
    <string name="layer_cor">Cor</string>

    <string name="seja_bem_vindo">Seja bem vindo!</string>
    <string name="intro_um">Este app tem como intuito o armazenamento de cartões de visita!</string>
    <string name="intro_dois">Crie cartões de visitas e compartilhe para quem quiser!</string>
    <string name="ja_possue_cadastro">Já tem cadastro?</string>
    <string name="text_button_login_anonimo">Use anonimamente</string>
    <string name="text_button_login_another_way">Login</string>
    <string name="text_button_create_acount">Registrar</string>
    <string name="title_activity_meios_de_acesso">MeiosDeAcessoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="label_share">Compartilhar</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="titulo_opcoes_de_login">Acesse com:</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_entrar">Entrar</string>

    <!-- Github autenticação. -->
    <string name="github_app_id">b301e7427585de17b2c9</string>
    <string name="github_app_secret">90349522cf4105f697bb81f0e7f6b71c3a982582</string>
    <string name="github_app_url">https://business-card-b9614.firebaseapp.com/__/auth/handler</string>
    <string name="confirm">confirmar</string>
    <string name="menu_logout">logout</string>


</resources>